[gd_scene load_steps=3 format=1]

[ext_resource path="res://scenes/test/map.gd" type="Script" id=1]
[ext_resource path="res://scenes/test/char.scn" type="PackedScene" id=2]

[node name="world" type="Spatial"]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
script/script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 0.969204, 0, 0.246257, 0, 1, 0, -0.246257, 0, 0.969204, -0.445047, 1.20911, 7.36022 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="DirectionalLight" type="DirectionalLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 0.66898, 0.74328, 0, -0.74328, 0.66898, -2.46457, 2.5408, 6.40808 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.05
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
shadow/mode = 0
shadow/max_distance = 0.0
shadow/split_weight = 0.5
shadow/zoffset_scale = 2.0

[node name="TestCube" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.86983, 0, -3.20421 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="TestCube1" type="TestCube" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.86983, 2.28618, -3.20421 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0

[node name="face1" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -4.60367, 0, 0.076986 )

[node name="face2" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.3864, 0, 0.1364 )

[node name="face3" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 0.764196, 0, -0.644984, 0, 1, 0, 0.644984, 0, 0.764196, -0.248007, 0, 0 )

[node name="face4" parent="." instance=ExtResource( 2 )]

transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.06225, 0, 0 )


